--- a/Ystervark.API/appsettings.json
+++ b/Ystervark.API/appsettings.json
@@ -8,7 +8,7 @@
   "Authentication": {
     "ClientId": "",
     "ClientSecret": "",
-    "Authority": "https://login.microsoftonline.com//",
+    "Authority": "https://login.microsoftonline.com/",
     "PostLogoutRedirectUri": "http://localhost:5000",
     "CallbackPath": "/signin-oidc",
     "ResponseType": "code id_token",
