--- a/Ystervark.API/appsettings.json
+++ b/Ystervark.API/appsettings.json
@@ -8,11 +8,16 @@
   "Authentication": {
     "ClientId": "",
     "ClientSecret": "",
-    "Authority": "https://login.microsoftonline.com/",
+    "Authority": "https://login.microsoftonline.com//",
     "PostLogoutRedirectUri": "http://localhost:5000",
     "CallbackPath": "/signin-oidc",
     "ResponseType": "code id_token",
     "Resource": "https://graph.microsoft.com/"
+  },
+  "Data": {
+    "ConnectionStrings": {
+      "BloggingDatabase": "Server=.;Database=BriteplanPROD;Trusted_Connection=True;"
+    }
   },
   "Logging": {
     "IncludeScopes": false,
@@ -25,9 +30,6 @@
       "LogLevel": {
         "Default": "Warning"
       }
-    },
-    "ConnectionStrings": {
-      "BloggingDatabase": "Server=.;Database=BriteplanPROD;Trusted_Connection=True;"
     }
   },
   "TokenOptions": {
