--- a/Ystervark.API/Ystervark.API.csproj
+++ b/Ystervark.API/Ystervark.API.csproj
@@ -35,8 +35,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Ystervark.Instant\Ystervark.Instant.csproj" />
     <ProjectReference Include="..\Ystervark.Database\Ystervark.Database.csproj" />
+    <ProjectReference Include="..\Ystervark.Instant\Ystervark.Instant.csproj" />
     <ProjectReference Include="..\Ystervark.IoC\Ystervark.IoC.csproj" />
     <ProjectReference Include="..\Ystervark.Manager\Ystervark.Manager.csproj" />
     <ProjectReference Include="..\Ystervark.Mapping\Ystervark.Mapping.csproj" />
