--- a/Ystervark.API/appsettings.QA.json
+++ b/Ystervark.API/appsettings.QA.json
@@ -1,7 +1,7 @@
 ﻿{
   "Data": {
     "ConnectionStrings": {
-      "BloggingDatabase": "Server=.;Database=BriteplanPROD;Trusted_Connection=True;"
+      "BloggingDatabase": ""
     }
   },
   "Logging": {
