--- a/Ystervarkie/Ystervarkie.csproj
+++ b/Ystervarkie/Ystervarkie.csproj
@@ -12,4 +12,10 @@
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="App\fonts\" />
+    <Folder Include="mamba\" />
+    <Folder Include="wwwroot\css\" />
+  </ItemGroup>
+
 </Project>
