--- a/Ystervarkie/bower.json
+++ b/Ystervarkie/bower.json
@@ -1,10 +1,38 @@
 {
-  "name": "asp.net",
+  "name": "ystervarkie",
   "private": true,
   "dependencies": {
-    "bootstrap": "3.3.7",
-    "jquery": "2.2.0",
-    "jquery-validation": "1.14.0",
-    "jquery-validation-unobtrusive": "3.2.6"
+    "fontawesome": "^4.7.0",
+    "bootstrap-sass-official": "^3.3.7",
+    "lodash": "^4.17.4",
+    "moment": "^2.18.1",
+    "angular": "^1.6.6",
+    "angular-aria": "^1.6.6",
+    "angular-sanitize": "^1.6.6",
+    "angular-touch": "^1.6.6",
+    "angular-cookies": "^1.6.6",
+    "angular-animate": "^1.6.6",
+    "angular-messages": "^1.6.6",
+    "angular-ui-router": "^1.0.7",
+    "oclazyload": "^1.1.0",
+    "animate.css": "^3.5.2",
+    "hint.css": "^2.5.0"
+  },
+  "group": {
+    "app": [
+      "fontawesome",
+      "bootstrap-sass-official",
+      "angular",
+      "angular-aria",
+      "angular-sanitize",
+      "angular-touch",
+      "angular-cookies",
+      "angular-animate",
+      "angular-messages",
+      "angular-ui-router",
+      "oclazyload",
+      "animate.css",
+      "hint.css"
+    ]
   }
 }
